# Trading-

./: CLEANUP_UNNECESSARY_FILES.bat  CMakeCache.txt  CMakeLists.txt  COMPLETE_TESTING_GUIDE.bat  PROJECT_SUMMARY.md  README.md  SETUP.md  build.bat  config.json  create_package.bat  package.json  setup_env.bat
.github/workflows/: ci.yml
MasterMindTrader_Package/: README.md  START_HERE.bat
MasterMindTrader_Package/cpp_version/: CMakeLists.txt  SETUP.md  build.bat  build.sh  setup_env.bat  test_setup.bat
MasterMindTrader_Package/cpp_version/include/: CapitalAllocator.h  ConfigManager.h  Logger.h  OrderManager.h  RiskManager.h  SettingsDialog.h  TradingDashboard.h
MasterMindTrader_Package/cpp_version/src/: ConfigManager.cpp  ExchangeConnector.cpp  MainWindow.cpp  OrderManager.cpp  PositionWidget.cpp  SettingsDialog.cpp  StrategyEngine.cpp  TradingDashboard.cpp  main.cpp
MasterMindTrader_Package/python_version/: requirements.txt  setup_new_pc.bat
include/: ChartWidget.h  ExchangeConnector.h  Logger.h  MainWindow.h  PaperTradeFallback.h  PositionWidget.h  RiskManager.h  StrategyEngine.h  TradeSessionManager.h  TradingDashboard.h
python_version/: README.md  SETUP_NEW_PC.md  config.json  mastermind_trader.py  requirements.txt  run_trader.bat
requirements/: README.md  cpp_requirements.txt  cursor.txt  project_specification.md  python_requirements.txt  requirement.txt
src/: CapitalAllocator.cpp  ChartWidget.cpp  ExchangeConnector.cpp  Logger.cpp  MainWindow.cpp  OrderManager.cpp  PaperTradeFallback.cpp  RiskManager.cpp  StrategyEngine.cpp  TradeSessionManager.cpp
tests/: CLIENT_REPORT_TEMPLATE.md  README.md  automated_test_cpp.bat  automated_test_python.bat  system_verification_checklist.md  test_ExchangeConnector.cpp  test_Logger.cpp  test_PaperTradeFallback.cpp  test_RiskManager.cpp  test_StrategyEngine.cpp
